# FUZIX

./: .gitignore  .hgtags  .travis.yml  BUILD_REQUIREMENTS.md  CREDITS  CodingStyle.md  ContributionRules  INSTALL  LICENCE  Makefile  README.68000.md  README.binfmt  README.build.md  README.md  RELEASE-NOTES  ReleaseNotes-0.3.md  ReleaseNotes.md  SECURITY.md  STATUS.md  version.mk
.github/workflows/: c-cpp.yml  continuous-integration.yml
Applications/: Makefile  build.mk  rules.6303  rules.6502  rules.6800  rules.68000  rules.6803  rules.6809  rules.68hc11  rules.8080  rules.8085  rules.8086  rules.armm0  rules.armm4  rules.esp32  rules.esp8266  rules.ns32k  rules.pdp11  rules.riscv32  rules.rpipico  rules.tms9995  rules.wrx6
Applications/ASM/: init.s
Applications/BCPL/: .gitignore  CGHDR  LIBHDR  Makefile  Makefile.6809  Makefile.linux  Makefile.z80  OPTIONS  README  SYNHDR  TRNHDR  bcpl  blib.c  blib.h  blib16.b  blib16.i  blibv.c  cg.b  cg.i  fuzix-BCPL.pkg  icex.c  icint.c  icintv.c  iclib.i  iclink.c  syn.b  syn.i  trn.b  trn.i
Applications/CC/: Language.md  Makefile.65c816  Makefile.8070  Makefile.8085  Makefile.common  Makefile.r2k  Makefile.z80  Operations.md  README.md  TARGET.md  backend-6502.c  backend-65c816.c  backend-6803.c  backend-6809.c  backend-8070.c  backend-8080.c  backend-bytecode.c  backend-default.c  backend-ee200.c  backend-nova3.c  backend-threadcode.c  backend-z80.c  backend.c  backend.h  backendold-z80.c  body.c  body.h  cc.c  cc6502.c  cc65c816.c  cc85.c  ccbyte.c  ccfuzix.c  ccthread.c  ccz80.c  compiler.h  copt.c  declaration.c  declaration.h  dumptokens.c  (+51 more)
Applications/MWC/: COPYRIGHT
Applications/SmallC/: .gitignore  M_README  Makefile  Makefile.6303  Makefile.6502  Makefile.6800  Makefile.68000  Makefile.6809  Makefile.68hc11  Makefile.8080  Makefile.8085  Makefile.armm0  Makefile.armm4  Makefile.common  Makefile.esp32  Makefile.esp8266  Makefile.linux  Makefile.ns32k  Makefile.pdp11  Makefile.riscv32  Makefile.tms9995  Makefile.wrx6  Makefile.z80  README  README.2  TODO  code6801.c  code6809.c  code8080.c  codegeneric.c  codez80.c  copt.c  data.c  data.h  defs.h  error.c  expr.c  foo.c  frontend.c  function.c  (+18 more)
Applications/TCL/: Makefile  Makefile.6809  Makefile.z80  fuzix-TCL.pkg  picol.c
Applications/V7/: .gitignore  COPYRIGHT
Applications/ar/: .gitignore  Makefile.common  Makefile.linux  append.c  ar.c  archive.c  archive.h  contents.c  delete.c  extern.h  extract.c  misc.c  move.c  print.c  replace.c  strmode.c
Applications/as09/: .gitignore  Makefile  Makefile.6303  Makefile.6502  Makefile.6800  Makefile.68000  Makefile.6809  Makefile.68hc11  Makefile.8080  Makefile.8085  Makefile.armm0  Makefile.armm4  Makefile.common  Makefile.esp32  Makefile.esp8266  Makefile.ns32k  Makefile.pdp11  Makefile.riscv32  Makefile.tms9995  Makefile.wrx6  Makefile.z80  address.h  align.h  alloc.c  as.c  as86_encap.sh  as86_to_data  assemble.c  byteord.h  chk  const.h  errors.c  errors.h  express.c  file.h  flag.h  fuzix-as09.pkg  genbin.c  genlist.c  genobj.c  (+18 more)
Applications/assembler/: 8008ops.h  COPYRIGHT.MWC  Cross.6800  Cross.8085  Cross.tms9995  Cross.wrx6  Cross.z80  Makefile  Makefile.6502  Makefile.65c816  Makefile.68000  Makefile.68hc11  Makefile.8070  Makefile.8080  Makefile.8085  Makefile.8086  Makefile.armm0  Makefile.common  Makefile.esp8266  Makefile.ns32k  Makefile.super8  README  (+54 more)
Documentation/: 65C816.md  65C816.txt  BankedZ80.md  DiskFormats  ExternalBuffers  FIXME.md  Interrupts.md  M68000  MSP430FR5969.md  README.md  TODO.md  TicklessKernel  Z80With32KSplit.txt  build-filesystem-ng.md  build-filesystem-ng.txt
GUI/: README  UTK  ascii.c  clip.c  input.c  layout.c  redraw_simple.c  test.c  utk.h
Images/: README
Kernel/: .gitignore  BUGS  CPU  Makefile  PORTING  PROJECTS  README  README.GRAPHICS  README.NET  README.md  TODO  TODO.md  audio.c  bank16k.c  bank16k_low.c  bank16kfc.c  bank32k.c  bank65c816.c  bank8086.c  bank8k.c  bankfixed.c  banksplit.c  blk384.c  blk400.c  blk512.c  buddy.c  build.mk  dep.mk  devinput.c  devio.c  devsys.c  filesys.c  flat.c  flat_mem.c  flat_mem.h  flat_small.c  font4x6.c  font4x8.c  font6x8.c  font8x8.c  (+117 more)
Kernel/platform-rpipico/: CMakeLists.txt  Makefile  README.md  config.h  core1.c  core1.h  devflash.c  devices.c  devsdspi.c  devtty.c  elf.c  globals.h  image.mk  main.c  misc.c  rawflash.c  swapper.c  tricks.S  tusb_config.h  update-flash.sh  usbdescriptors.c  usermem.c
Kernel/platform-rpipico/tools/: uf2conv.c  uf2format.h
Kernel/platform/platform-rpipico/: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  core1.c  core1.h  devflash.c  devgpio.c  devices.c  devrpi.c  devrpi.h  devsdspi.c  devtty.c  devtty.h  fuzix-platform-rpipico.pkg  image.mk  main.c  mangle.h  misc.c  pico_ioctl.h  picosdk.h  rawflash.c  rawuart.c  rawuart.h  swapper.c  target.mk  tricks.S  tusb_config.h  update-flash.sh  usbdescriptors.c
Kernel/platform/platform-rpipico/tools/: uf2format.h
Kernel/platform/platform-rpipico/utils/: .gitignore  Makefile  pico  picoctl.c  picogpio.c  picoioctl.c  ps-rpipico.patch
Patches/: README  SDCC  lwtools-ld-wrapper.patch  sdltrs-fix-iff-flags.patch  z80pack-cromemco-diskfix.patch
Standalone/: .gitignore  Makefile  build.mk  chmem.c  devio.c  elf2aout.c  elf2flt.c  fsck.c  fsck400.c  fuzix_fs.h  mkfs.c  mkfs400.c  mkftl.1  mkftl.c  raw2mfloppy.c  sethint.c  size.c  ucp.1  ucp.c  util.c  util.h  util400.c  xfs1.c  xfs1a.c  xfs1b.c  xfs2.c
Tools/: build-6303  build-6502  build-65c816  build-68000  build-6803  build-6809  build-68hc11  build-8085  build-8086  build-armm0  build-armm4  build-esp32  build-esp8266  build-ns32k  build-riscv32  build-tms9995  build-wrx6  build-z8  build-z80  build-z80u
docs/: 65C816.md  68HC11ABI.md  BankedZ80.md  DevPlatforms.md  DeviceDrivers.md  DiskFormats.md  ESP8266.md  ExternalBuffers.md  Floppy.md  Graphics.md  Interrupts.md  Intro.md  M68000.md  Makefile  MemoryManagement.md  Notices.md  OBSOLETE_MSP430FR5969.md  Platforms.md  Process.rst  RC2014.md  TTY.rst  Tickless.md  VT.rst  Z80ABI.md  Z80Thunked.md  conf.py  index.rst
(+6963 files in other folders)
